--- a/individual-developer.html
+++ b/individual-developer.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="all-developers.html">Developers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
+                        <a class="nav-link" href="all-developers.html">Login</a>
                     </li>
                 </ul>
             </div>
